[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Gabriel Canto <gabrielcanto2016@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.1"
pytest = "^8.3.1"
django = "^5.2.1"
django-rest-framework = "^0.1.0"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.4.6"
whitenoise = "^6.9.0"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.10"
dotenv = "^0.9.9"

[tool.poetry.group.dev.dependencies]
factory-boy = "^3.3.1"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.core.masonry.api"
